@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Pixmap.H,v 1.6.2.8.2.7 2002/01/01 15:11:28 easysw Exp $"
+// "$Id: Fl_Pixmap.H,v 1.6.2.8.2.8 2002/08/05 17:50:23 easysw Exp $"
 //
 // Pixmap header file for the Fast Light Tool Kit (FLTK).
 //
@@ -63,10 +63,11 @@ class FL_EXPORT Fl_Pixmap : public Fl_Image {
   void draw(int X, int Y) {draw(X, Y, w(), h(), 0, 0);}
   virtual void label(Fl_Widget*w);
   virtual void label(Fl_Menu_Item*m);
+  virtual void uncache();
 };
 
 #endif
 
 //
-// End of "$Id: Fl_Pixmap.H,v 1.6.2.8.2.7 2002/01/01 15:11:28 easysw Exp $".
+// End of "$Id: Fl_Pixmap.H,v 1.6.2.8.2.8 2002/08/05 17:50:23 easysw Exp $".
 //
