@@ -1,6 +1,6 @@
 /* config.h.  Generated automatically by configure.  */
 /*
- * "$Id: config.os2x,v 1.1.2.4.2.10 2002/07/09 17:41:24 easysw Exp $"
+ * "$Id: config.os2x,v 1.1.2.4.2.11 2002/08/05 17:50:24 easysw Exp $"
  *
  * Configuration file for the Fast Light Tool Kit (FLTK).
  *
@@ -210,7 +210,6 @@
 
 #define HAVE_PNG_GET_VALID 1
 /* #undef HAVE_PNG_SET_TRNS_TO_ALPHA */
-#define HAVE_PNG_READ_DESTROY 1
 
 /*
  * Do we have POSIX threading?
@@ -221,5 +220,5 @@
 
 
 /*
- * End of "$Id: config.os2x,v 1.1.2.4.2.10 2002/07/09 17:41:24 easysw Exp $".
+ * End of "$Id: config.os2x,v 1.1.2.4.2.11 2002/08/05 17:50:24 easysw Exp $".
  */
